# SmartIssues

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_report.yml  ci.yml
src/: __init__.py  cache.py  config.py  formatter.py  github_client.py  processor.py  utils.py
templates/: report.md.jinja2  todo.md.jinja2
tests/: __init__.py  conftest.py  test_github_client.py  test_processor.py
